# rag-app-on-azure

./: pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: deploy.yml
environments/dev/: main.tf  terraform.tfvars  variables.tf
modules/api/: main.tf  outputs.tf  variables.tf
modules/auth/: main.tf  outputs.tf  variables.tf
modules/compute/: main.tf  outputs.tf  variables.tf
modules/database/: main.tf  outputs.tf  variables.tf
modules/monitoring/: main.tf  outputs.tf  variables.tf
modules/network/: main.tf  outputs.tf  variables.tf
modules/storage/: main.tf  outputs.tf  variables.tf
scripts/: cleanup.sh  import_resources.sh  network-diagnostics.sh
src/auth_handler/: auth_handler.py  function_app.py
src/db_init/: db_init.py  function_app.py  requirements.txt
src/document_processor/: document_processor.py  function_app.py  requirements.txt
src/query_processor/: function_app.py  query_processor.py  requirements.txt
src/tests/integration/: run_integration_tests.py
src/tests/unit/: conftest.py  test_db_init.py  test_document_processor.py  test_query_processor.py  test_upload_handler.py
src/upload_handler/: function_app.py  requirements.txt  upload_handler.py
