[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-app-on-azure"
version = "0.1.0"
description = "RAG Application on Azure"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "azure-functions>=1.15.0",
    "azure-storage-blob>=12.16.0",
    "azure-cosmos>=4.5.0",
    "azure-identity>=1.13.0",
    "azure-keyvault-secrets>=4.7.0",
    "psycopg2-binary>=2.9.10",
    "google-ai-generativelanguage>=0.4.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.11",
    "pypdf>=3.17.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "azure-functions-devops-build>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = [".", "src"]